Sidebar fix (#22)
* 로그인/로그아웃 버튼 전환

아직 미완

* Squashed commit of the following:

changed variable name & simplified code

* Sidebar-민주

categories-btn이랑 categories-container 높이 조정

    %랑 vh랑 다른 게 진짜 뭘까...
    categories-container의 높이가 왜 달라질까

* 카테고리 페이지 수정중

* Update SideBar.js

* sidebar 이름 통일

* Update SideBar.js

---------

--- a/news-pages/src/components/Sidebar.css
+++ b/news-pages/src/components/Sidebar.css
@@ -19,7 +19,7 @@
     /* position: fixed; 화면이 움직여도 고정 */
     display: flex;
     height: auto;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     align-items: center;
     flex-direction: column; /* 세로로 배열 */
 }
@@ -30,8 +30,7 @@
     height: 1.2em;
     margin-right: 10px;
 }
-
-/* 카테고리 글자 */
+/* 카테고리 */
 #categories-title {
     display: flex;
     justify-content: center;
@@ -50,9 +49,9 @@
     justify-content: center;
     align-items: center;
 
-    flex: 1 1 0;
+    /* flex: 1 1 0; */
     width: 250px;
-    /* height: auto; */
+    height: 60px;
     background-color: transparent;
     border: none;
 
@@ -60,7 +59,6 @@
 
     cursor: pointer;
 }
-
 .categories-btn:hover {
     background-color: white;
     color: #0357ff;
